--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ html {
 
 
 .page {
-  height: 100vh;
+  height: 95vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -49,7 +49,7 @@ html {
 }
 
 .page1 {
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -636,9 +636,11 @@ html {
 
 .DesChris{
   color: rgb(0, 0, 0);
-  font-size: 2.8vw;
+  font-size: 3vw;
   line-height: 4vw;
-  font-family:cursive;
+  font-family:"Nerko One";
+  padding-left: 5vw;
+  padding-right: 5vw;
 }
 
 /* Default hidden state for animations */
@@ -706,7 +708,7 @@ iframe {
 .sound-toggle {
   position: fixed;
   top: 10px;
-  right: 10px;
+  right: 14px;
   background-color: transparent; /* No background color */
   border: none;
   padding: 5px; /* Adjust padding as needed */
@@ -717,8 +719,8 @@ iframe {
 }
 
 .sound-toggle img {
-  width: 4vw;
-  height: vw
+  width: 6vw;
+  height: 6vw
 }
 
 .sound-toggle:hover {
