--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,8 @@ html {
   color: rgb(255, 194, 224);
   -webkit-text-stroke-color: #2d0037;
   -webkit-text-stroke-width: 1px;
-  font-size: 7vw;
-  font-family: cursive;
+  font-size: 8vw;
+  font-family: fantasy;
   font-weight: bold;
   line-height: 4vw;
   padding-top: 6vw;
