--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,20 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Candle3D';
+  src: url('font/Candle3D.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PCSnowballs';
+  src: url('font/PC Snowballs.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -343,7 +357,7 @@ html {
   color: rgb(0, 0, 0);
   -webkit-text-stroke-color: #ff3baa;
   -webkit-text-stroke-width: 1px;
-  font-size: 8vw;
+  font-size: 10vw;
   font-family: "Nerko One";
   line-height: 8vw;
   padding-bottom: 5vw;
@@ -352,7 +366,7 @@ html {
 .countdownDes{
   color: rgb(33, 0, 14);
   font-size: 2.8vw;
-  font-family: bradley hand ,cursive;
+  font-family: bradley hand ;
   font-weight: bold;
   line-height: 4vw;
   padding-right: 8vw;
@@ -377,7 +391,7 @@ html {
 
 .calendar img {
   display: block;
-  width: 70vw;
+  width: 85vw;
   height: auto;
 }
 
@@ -479,7 +493,7 @@ html {
   background-color: rgba(255, 77, 190, 0.4); 
   border-radius: 50%; 
   position: absolute; 
-  bottom: 16%;
+  bottom: 17.5%;
   left: 57.5%; 
   transform: translate(-50%, -50%); 
   pointer-events: none;
@@ -507,7 +521,7 @@ html {
   color: rgb(255, 15, 107);
   -webkit-text-stroke-color: #000;
   -webkit-text-stroke-width: 0.5px;
-  font-size: 8.2vw;
+  font-size: 9vw;
   font-family: 'BeautifulBarbies', serif;
   line-height: 4vw;
   padding-bottom: 5vw;
@@ -557,7 +571,7 @@ html {
 
 .Pool {
   color: rgb(53, 125, 240);
-  font-size:5.5vw;
+  font-size:5.7vw;
   font-family: 'Blazeberg', sans-serif; 
   line-height: 4vw;
   padding-bottom: 3vw;
@@ -699,6 +713,7 @@ html {
   border: 5px solid white; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   margin:5vw;
+  margin-bottom: 13vw;
 }
 
 .textContainer3 {
@@ -706,26 +721,28 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   text-align: center;
 }
 
 .Christmas{
-  color: rgb(255, 209, 235);
+  color: rgb(255, 97, 187);
   -webkit-text-stroke-color: #000000;
-  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-width: 0.5px;
   font-size: 10vw;
-  font-family: 'ChristmasChances', sans-serif;
+  font-family: 'Candle3D';
   font-weight: bold;
-  line-height: 7vw;
-  padding-top: 6vw;
+  line-height: 10vw;
+  padding-bottom: 10vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
 }
 
 .DesChris{
   color: rgb(60, 0, 21);
-  font-size: 3.5vw;
+  font-size: 3.8vw;
   line-height: 4vw;
-  font-family: 'AustieBostHappyHolly', cursive;
+  font-family: 'AustieBostHappyHolly';
   position: relative; 
   z-index: 2; 
   padding-left: 5vw;
