--- a/styles.css
+++ b/styles.css
@@ -391,7 +391,7 @@ html {
 
 .calendar img {
   display: block;
-  width: 85vw;
+  width: 80vw;
   height: auto;
 }
 
@@ -493,7 +493,7 @@ html {
   background-color: rgba(255, 77, 190, 0.4); 
   border-radius: 50%; 
   position: absolute; 
-  bottom: 17.5%;
+  bottom: 16%;
   left: 57.5%; 
   transform: translate(-50%, -50%); 
   pointer-events: none;
@@ -521,7 +521,7 @@ html {
   color: rgb(255, 15, 107);
   -webkit-text-stroke-color: #000;
   -webkit-text-stroke-width: 0.5px;
-  font-size: 9vw;
+  font-size: 8.2vw;
   font-family: 'BeautifulBarbies', serif;
   line-height: 4vw;
   padding-bottom: 5vw;
@@ -571,7 +571,7 @@ html {
 
 .Pool {
   color: rgb(53, 125, 240);
-  font-size:5.7vw;
+  font-size:5.5vw;
   font-family: 'Blazeberg', sans-serif; 
   line-height: 4vw;
   padding-bottom: 3vw;
@@ -713,7 +713,6 @@ html {
   border: 5px solid white; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   margin:5vw;
-  margin-bottom: 13vw;
 }
 
 .textContainer3 {
@@ -721,28 +720,26 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
 }
 
 .Christmas{
-  color: rgb(255, 97, 187);
+  color: rgb(255, 209, 235);
   -webkit-text-stroke-color: #000000;
-  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-width: 1px;
   font-size: 10vw;
-  font-family: 'Candle3D';
+  font-family: 'ChristmasChances', sans-serif;
   font-weight: bold;
-  line-height: 10vw;
-  padding-bottom: 10vw;
-  padding-left: 3vw;
-  padding-right: 3vw;
+  line-height: 7vw;
+  padding-top: 6vw;
 }
 
 .DesChris{
   color: rgb(60, 0, 21);
-  font-size: 3.8vw;
+  font-size: 3.5vw;
   line-height: 4vw;
-  font-family: 'AustieBostHappyHolly';
+  font-family: 'AustieBostHappyHolly', cursive;
   position: relative; 
   z-index: 2; 
   padding-left: 5vw;
