--- a/styles.css
+++ b/styles.css
@@ -724,6 +724,17 @@ html {
   text-align: center;
 }
 
+@media (max-width: 552px) {
+  .textContainer3 {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+}
+
 .Christmas{
   color: rgb(255, 209, 235);
   -webkit-text-stroke-color: #000000;
